Fix gap between mobile menu and navbar

--- a/src/scss/header/_menu.scss
+++ b/src/scss/header/_menu.scss
@@ -1,5 +1,5 @@
 #main-menu {
-    @apply fixed bottom-0 pt-4 overflow-auto left-0 right-0 hidden w-full bg-white top-[68px] md:top-[72px] lg:flex lg:relative lg:bg-transparent lg:top-0 lg:items-center lg:pt-0 lg:justify-center lg:overflow-visible;
+    @apply fixed bottom-0 pt-4 overflow-auto left-0 right-0 hidden w-full bg-white top-[64px] md:top-[72px] lg:flex lg:relative lg:bg-transparent lg:top-0 lg:items-center lg:pt-0 lg:justify-center lg:overflow-visible;
 
     .main-menu-wrapper {
         @apply w-full;
